@@ -43,7 +43,6 @@ TAO_Stub::TAO_Stub (const char *repository_id,
   , forward_profiles_ (0)
   , forward_profiles_perm_ (0)
   , profile_in_use_ (0)
-  , profile_lock_ptr_ (0)
   , profile_success_ (false)
   , refcount_ (1)
 #if (TAO_HAS_CORBA_MESSAGING == 1)
@@ -74,8 +73,6 @@ TAO_Stub::TAO_Stub (const char *repository_id,
   // Cache the ORB pointer to respond faster to certain queries.
   this->orb_ = CORBA::ORB::_duplicate (this->orb_core_->orb ());
 
-  this->profile_lock_ptr_ = new ACE_Lock_Adapter<TAO_SYNCH_MUTEX> ();
-
   // Explicit trigger the loading of the client strategy factory at this moment.
   // Not doing it here could lead to a problem loading it later on during
   // an upcall
@@ -101,8 +98,6 @@ TAO_Stub::~TAO_Stub (void)
       this->profile_in_use_ = 0;
     }
 
-  delete this->profile_lock_ptr_;
-
 #if (TAO_HAS_CORBA_MESSAGING == 1)
   delete this->policies_;
 #endif
@@ -118,9 +113,9 @@ TAO_Stub::add_forward_profiles (const TAO_MProfile &mprofiles,
 {
   // we assume that the profile_in_use_ is being
   // forwarded!  Grab the lock so things don't change.
-  ACE_MT (ACE_GUARD (ACE_Lock,
+  ACE_MT (ACE_GUARD (TAO_SYNCH_MUTEX,
                      guard,
-                     *this->profile_lock_ptr_));
+                     this->profile_lock_));
 
   if (permanent_forward)
     {
@@ -160,9 +155,9 @@ TAO_Stub::create_ior_info (IOP::IOR *&ior_info, CORBA::ULong &index)
 {
   // We are creating the IOR info. Let us not be disturbed. So grab a
   // lock.
-  ACE_MT (ACE_GUARD_RETURN (ACE_Lock,
+  ACE_MT (ACE_GUARD_RETURN (TAO_SYNCH_MUTEX,
                             guard,
-                            *this->profile_lock_ptr_,
+                            this->profile_lock_,
                             -1));
 
   IOP::IOR *tmp_info = 0;
@@ -228,7 +223,7 @@ TAO_Stub::object_key (void) const
     {
       // Double-checked
       // FUZZ: disable check_for_ACE_Guard
-      ACE_Guard<ACE_Lock> obj (*this->profile_lock_ptr_);
+      ACE_Guard<TAO_SYNCH_MUTEX> obj (const_cast <TAO_SYNCH_MUTEX&>(this->profile_lock_));
       // FUZZ: enable check_for_ACE_Guard
 
       if (obj.locked () != 0 &&  this->forward_profiles_ != 0)
@@ -521,9 +516,9 @@ TAO_Stub::marshal (TAO_OutputCDR &cdr)
     }
   else
     {
-      ACE_MT (ACE_GUARD_RETURN (ACE_Lock,
+      ACE_MT (ACE_GUARD_RETURN (TAO_SYNCH_MUTEX,
                                 guard,
-                                *this->profile_lock_ptr_,
+                                this->profile_lock_,
                                 0));
 
       ACE_ASSERT(this->forward_profiles_ !=0);
